--- a/css/style.css
+++ b/css/style.css
@@ -946,6 +946,9 @@ a {
 .product:hover .product__purchase,
 .product:focus .product__purchase {
   display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
 }
 
 .popular-manufacturers {
@@ -1032,6 +1035,9 @@ a {
 
 .wrapper-service {
   display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
 }
 
 .services__block {
@@ -1052,6 +1058,9 @@ a {
 .services__control {
   position: relative;
   display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   flex-direction: column;
   width: 240px;
   margin: 0;
@@ -1179,4 +1188,147 @@ a {
 
 .services__block-link:active {
   background-color: #ba2732;
+}
+
+.about {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  justify-content: space-between;
+  margin-top: 78px;
+  margin-bottom: 85px;
+}
+
+.about__us {
+  width: 530px;
+}
+
+.about__us-title {
+  margin: 0;
+  font-size: 30px;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+.about__us-subtitle {
+  margin-top: 24px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 23px;
+}
+
+.about__us-transportation {
+  margin-top: 26px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 23px;
+}
+
+.company-transportation {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.company-transportation__item {
+  position: relative;
+  padding-left: 37px;
+  line-height: 40px;
+}
+
+.company-transportation__item::before {
+  position: absolute;
+  top: 19px;
+  left: 0;
+  width: 25px;
+  height: 2px;
+  content: "";
+  background-color: #ee3643;
+}
+
+.about__us-read-more {
+  position: relative;
+  display: block;
+  width: 220px;
+  height: 38px;
+  margin-top: 27px;
+  font-size: 14px;
+  color: #ffffff;
+  line-height: 38px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #ee3643;
+  border-radius: 3px;
+  outline: none;
+}
+
+.about__us-read-more:hover,
+.about__us-read-more:focus {
+  background-color: #ca2c37;
+}
+
+.about__us-read-more:active {
+  background-color: #ba2732;
+}
+
+.about__contacts {
+  width: 300px;
+}
+
+.about__contacts-title  {
+  margin: 0;
+  font-size: 30px;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+.about__contacts-pick-up {
+  margin-top: 24px;
+  margin-bottom: 34px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 23px;
+}
+
+.about__contacts-write-us {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 38px;
+  margin-top: 33px;
+  font-size: 14px;
+  color: #ffffff;
+  line-height: 38px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #ee3643;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  outline: none;
+}
+
+.about__contacts-write-us:hover,
+.about__contacts-write-us:focus {
+  background-color: #ca2c37;
+}
+
+.about__contacts-write-us:active {
+  background-color: #ba2732;
+}
+
+.popup-map {
+  display: none;
+}
+
+.write-us {
+  display: none;
+}
+
+.footer-wrapper-top {
+  background-color: #32425c;
+}
+.footer-wrapper-bottom {
+  background-color: #293449;
 }
