--- a/css/style.css
+++ b/css/style.css
@@ -111,16 +111,7 @@ a {
   height: 42px;
   background-color: #ee3643;
   outline: none;
-}
-
-.header__logo-link::after {
-  position: absolute;
-  left: 0;
-  bottom: -5px;
-  width: 100%;
-  height: 5px;
-  content: "";
-  background-color: #b52933;
+  box-shadow: 0 5px 0px #b52933;
 }
 
 .header__logo-link:hover,
@@ -841,7 +832,7 @@ a {
 
 .product__price::after {
   position: absolute;
-  right: -39px;
+  right: -38px;
   top: 0;
   content: "";
   border: 19px solid transparent;
@@ -1291,9 +1282,12 @@ a {
   line-height: 23px;
 }
 
+.about__map{
+  cursor: pointer;
+}
+
 .about__contacts-write-us {
   position: relative;
-  display: block;
   width: 100%;
   height: 38px;
   margin-top: 33px;
@@ -1331,4 +1325,222 @@ a {
 }
 .footer-wrapper-bottom {
   background-color: #293449;
+}
+
+.footer__top {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  padding-bottom: 48px;
+}
+
+.footer__top-logo-link {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  width: 220px;
+  height: 68px;
+  background-color: #ee3643;
+  box-shadow: inset 0 -5px 0px #b52933;
+  cursor: pointer;
+}
+
+.footer__top-address {
+  margin: 0;
+  margin-top: 28px;
+  margin-left: 5px;
+  color: #ffffff;
+  line-height: 24px;
+}
+
+.footer__top-navigation {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  justify-content: space-between;
+  width: 548px;
+  margin: 0;
+  padding: 0;
+  margin-top: 39px;
+  margin-left: 63px;
+  list-style: none;
+}
+
+.footer__top-navigation-link {
+  color: #ffffff;
+  outline: none;
+}
+
+.footer__bottom-navigation {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  justify-content: space-between;
+  width: 525px;
+  margin: 0;
+  padding: 0;
+  margin-top: 39px;
+  margin-left: 86px;
+  list-style: none;
+}
+
+.footer__bottom-navigation-link {
+  color: #ffd180;
+  outline: none;
+}
+
+.footer__top-logo-link:hover,
+.footer__top-logo-link:focus {
+  background-color: #ca2c37;
+}
+
+.footer__top-logo-link:active {
+  background-color: #ba2732;
+}
+
+.footer__top-navigation-link:hover,
+.footer__top-navigation-link:focus,
+.footer__bottom-navigation-link:hover,
+.footer__bottom-navigation-link:focus {
+  text-decoration: underline;
+}
+
+.footer__top-navigation-link:active,
+.footer__bottom-navigation-link:active {
+  opacity: 0.5;
+}
+
+.footer__bottom {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  justify-content: space-between;
+  padding-top: 38px;
+  padding-bottom: 31px;
+}
+
+
+.footer__bottom-copyright {
+  margin: 0;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+
+.footer__bottom-social {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  margin: 0;
+  margin-left: 104px;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__bottom-social-link {
+  position: relative;
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #212a3a;
+  outline: none;
+}
+
+.footer__bottom-social :nth-child(2) {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.footer__bottom-social-vk::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 26px;
+  height: 15px;
+  content: "";
+  background-image: url("../img/icons/vk-icon.svg");
+  background-repeat: no-repeat;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.footer__bottom-social-fb::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 12px;
+  height: 22px;
+  content: "";
+  background-image: url("../img/icons/fb-icon.svg");
+  background-repeat: no-repeat;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.footer__bottom-social-inst::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 21px;
+  height: 21px;
+  content: "";
+  background-image: url("../img/icons/insta-icon.svg");
+  background-repeat: no-repeat;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.footer__bottom-social-link:hover,
+.footer__bottom-social-link:focus {
+  background-color: #ee3643;
+}
+
+.footer__bottom-social-link:active {
+  background-color: #ee3643;
+}
+
+.footer__bottom-communication,
+.footer__bottom-developed {
+  margin: 0;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.footer__bottom-communication-link,
+.footer__bottom-developed-link {
+  color: #ffd180;
+  outline: none;
+}
+
+.footer__bottom-communication {
+  margin-left: 70px;
+}
+
+.footer__bottom-developed {
+  margin-right: 13px;
+}
+
+.footer__bottom-communication-link:hover,
+.footer__bottom-communication-link:focus,
+.footer__bottom-developed-link:hover,
+.footer__bottom-developed-link:focus  {
+  text-decoration: underline;
+}
+
+.footer__bottom-communication-link:active,
+.footer__bottom-developed-link:active {
+  color: #ee3643;
+  text-decoration: none;
 }
