--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ body {
   font-family: "Cuprum", "Arial", sans-serif;
   margin: 0;
   font-size: 18px;
+  line-height: 1.5;
 }
 
 a {
@@ -181,12 +182,12 @@ a {
 
 .user-order__link {
   position: relative;
+  display: block;
   width: 150px;
-  height: 42px;
+  padding: 8px 0px 8px 0px;
   font-size: 17px;
   color: rgba(255, 255, 255, 1);
   text-align: center;
-  line-height: 42px;
   outline: none;
 }
 
@@ -282,7 +283,7 @@ a {
   display: -ms-flexbox;
   display: -webkit-flex;
   height: 158px;
-  padding: 45px 0px;
+  padding: 47px 0px;
 }
 
 .substrate {
@@ -293,11 +294,9 @@ a {
 .description {
   width: 210px;
   margin: 0;
-  margin-top: 5px;
   margin-left: 53px;
   font-size: 16px;
   font-style: italic;
-  line-height: 23px;
   color: #ee3643;
 }
 
@@ -310,11 +309,9 @@ a {
 .contacts__phone {
   position: relative;
   width: 270px;
-  height: 45px;
   margin: 0;
-  padding-left: 17px;
+  padding: 3px 3px 3px 23px;
   font-size: 21px;
-  line-height: 40px;
   color: #ee3643;
   border: 3px solid #ffffff;
 }
@@ -335,7 +332,7 @@ a {
 
 .contacts__address {
   margin: 0;
-  margin-top: 10px;
+  margin-top: 7px;
   font-size: 14px;
   color: #32425c;
 }
@@ -358,12 +355,10 @@ a {
 .user__navigation-login-link {
   position: relative;
   display: block;
-  width: 121px;
   margin-right: 10px;
-  padding-left: 20px;
+  padding: 6px 27px 6px 46px;
   font-size: 21px;
   color: rgba(0, 0, 0, 1);
-  line-height: 45px;
   background-color: #ffffff;
   outline: none;
 }
@@ -385,10 +380,9 @@ a {
 
 .user__navigation-registration-link {
   display: block;
-  width: 150px;
+  padding: 6px 24px 6px 24px;
   font-size: 21px;
   color: rgba(0, 0, 0, 1);
-  line-height: 45px;
   background-color: #ffffff;
   outline: none;
 }
@@ -442,7 +436,7 @@ a {
   padding: 20px 31px;
   font-size: 17px;
   color: rgba(255, 255, 255, 1);
-  line-height: 17px;
+  line-height: 0.9;
   outline: none;
 }
 
@@ -478,7 +472,6 @@ a {
 .offers__title {
   margin: 0;
   font-size: 24px;
-  line-height: 30px;
 }
 
 .offers__item-material {
@@ -562,13 +555,12 @@ a {
 .offers__link {
   display: block;
   width: 135px;
-  height: 38px;
-  margin-top: 13px;
+  margin-top: 9px;
   margin-left: 2px;
+  padding: 9px 0px;
   font-size: 14px;
   text-transform: uppercase;
   text-align: center;
-  line-height: 38px;
   color: #ffffff;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 3px;
@@ -613,7 +605,7 @@ a {
 
 .offers__slider-title {
   position: absolute;
-  top: 19px;
+  top: 13px;
   left: 24px;
   margin: 0;
   font-size: 36px;
@@ -625,7 +617,7 @@ a {
 
 .offers__slider-subtitle {
   position: absolute;
-  top: 63px;
+  top: 59px;
   left: 25px;
   margin: 0;
   font-size: 18px;
@@ -635,15 +627,14 @@ a {
 .offers__slider-link {
   position: absolute;
   left: 26px;
-  bottom: 22px;
+  bottom: 20px;
   display: block;
   width: 195px;
-  height: 38px;
+  padding: 9px 0px;
   font-size: 14px;
   text-transform: uppercase;
   color: #ffffff;
   text-align: center;
-  line-height: 38px;
   background-color: #ee3643;
   border-radius: 3px;
   outline: none;
@@ -738,7 +729,6 @@ a {
   margin-right: auto;
   font-size: 30px;
   font-weight: normal;
-  line-height: 30px;
   color: #32425c;
   text-transform: uppercase;
 }
@@ -748,10 +738,9 @@ a {
   right: 0;
   display: block;
   width: 253px;
-  height: 38px;
   font-size: 14px;
   color: #ffffff;
-  line-height: 38px;
+  padding: 9px 0px;
   text-align: center;
   text-transform: uppercase;
   background-color: #ee3643;
@@ -795,16 +784,16 @@ a {
 .product__name {
   width: 190px;
   margin: auto;
-  margin-top: 3px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
+  line-height: 1.2;
   font-weight: 700;
 }
 
 .product__discount {
   display: block;
   height: 19px;
-  margin-top: 11px;
+  margin-top: 9px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 17px;
   font-weight: 700;
@@ -815,16 +804,15 @@ a {
 .product__price {
   position: relative;
   width: 121.5px;
-  height: 38px;
   margin: 0;
   margin-left: 42px;
-  margin-top: 9px;
-  padding-left: 15px;
+  margin-top: 11px;
+  padding: 5px 5px 5px 15px ;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   color: #fff;
   font-size: 17px;
-  line-height: 38px;
+  line-height: 1.7;
   background-color: #ee3643;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -836,7 +824,7 @@ a {
   top: 0;
   content: "";
   border: 19px solid transparent;
-  border-left: 20px solid #ee3643;
+  border-left: 19px solid #ee3643;
 }
 
 .product__purchase {
@@ -854,8 +842,8 @@ a {
 .product__purchase-buy {
   position: relative;
   width: 135px;
-  height: 38px;
   margin-bottom: 7px;
+  padding: 11px 0px;
   font-size: 14px;
   text-transform: uppercase;
   color: rgba(255, 255, 255, 1);
@@ -869,7 +857,7 @@ a {
 
 .product__purchase-bookmark {
   width: 135px;
-  height: 38px;
+  padding: 9px 0px;
   font-size: 14px;
   text-transform: uppercase;
   color: rgba(50, 66, 92, 1);
@@ -946,31 +934,6 @@ a {
   margin-bottom: 85px;
 }
 
-.popular-manufacturers-title {
-  margin: 0;
-  margin-right: auto;
-  font-size: 30px;
-  font-weight: normal;
-  line-height: 30px;
-  color: #32425c;
-  text-transform: uppercase;
-}
-
-.popular-manufacturers-link {
-  position: relative;
-  right: 0;
-  display: block;
-  width: 253px;
-  height: 38px;
-  font-size: 14px;
-  color: #ffffff;
-  line-height: 38px;
-  text-align: center;
-  text-transform: uppercase;
-  background-color: #ee3643;
-  border-radius: 3px;
-}
-
 .wrapper-manufacturers {
   display: flex;
   display: -webkit-box;
@@ -980,7 +943,6 @@ a {
   justify-content: space-between;
   margin-top: 20px;
 }
-
 
 .manufacturers__link {
   display: flex;
@@ -1003,7 +965,7 @@ a {
 
 .services {
   height: 500px;
-  padding-top: 43px;
+  padding-top: 36px;
   padding-bottom: 99px;
   background-color: #f4f8fa;
 }
@@ -1018,10 +980,10 @@ a {
 .services__subtitle {
   width: 400px;
   margin: 0;
-  margin-top: 21px;
+  margin-top: 19px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
-  line-height: 26px;
+  line-height: 1.8;
 }
 
 .wrapper-service {
@@ -1055,7 +1017,7 @@ a {
   flex-direction: column;
   width: 240px;
   margin: 0;
-  margin-top: 68px;
+  margin-top: 72px;
 }
 
 .services__control::after {
@@ -1070,8 +1032,7 @@ a {
 }
 
 .services__control-btn {
-  height: 61px;
-  padding-left: 22px;
+  padding: 19px 0px 19px 22px;
   font-size: 21px;
   font-weight: 700;
   color: #ffffff;
@@ -1117,10 +1078,10 @@ a {
 }
 
 .services__block-subtitle {
-  margin-top: 22px;
+  margin-top: 16px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
-  line-height: 25px;
+  line-height: 1.8;
 }
 
 .services__block-delivery::after {
@@ -1160,11 +1121,10 @@ a {
   position: relative;
   display: block;
   width: 195px;
-  height: 38px;
-  margin-top: 27px;
+  margin-top: 29px;
+  padding: 9px 0px;
   font-size: 14px;
   color: #ffffff;
-  line-height: 38px;
   text-align: center;
   text-transform: uppercase;
   background-color: #ee3643;
@@ -1187,7 +1147,7 @@ a {
   display: -ms-flexbox;
   display: -webkit-flex;
   justify-content: space-between;
-  margin-top: 78px;
+  margin-top: 73px;
   margin-bottom: 85px;
 }
 
@@ -1203,17 +1163,17 @@ a {
 }
 
 .about__us-subtitle {
-  margin-top: 24px;
+  margin-top: 20px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
-  line-height: 23px;
+  line-height: 1.8;
 }
 
 .about__us-transportation {
   margin-top: 26px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
-  line-height: 23px;
+  line-height: 1.8;
 }
 
 .company-transportation {
@@ -1225,7 +1185,7 @@ a {
 .company-transportation__item {
   position: relative;
   padding-left: 37px;
-  line-height: 40px;
+  line-height: 2.23;
 }
 
 .company-transportation__item::before {
@@ -1242,11 +1202,10 @@ a {
   position: relative;
   display: block;
   width: 220px;
-  height: 38px;
   margin-top: 27px;
+  padding: 9px 0px;
   font-size: 14px;
   color: #ffffff;
-  line-height: 38px;
   text-align: center;
   text-transform: uppercase;
   background-color: #ee3643;
@@ -1275,11 +1234,11 @@ a {
 }
 
 .about__contacts-pick-up {
-  margin-top: 24px;
+  margin-top: 20px;
   margin-bottom: 34px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
-  line-height: 23px;
+  line-height: 1.8;
 }
 
 .about__map {
@@ -1289,11 +1248,10 @@ a {
 .about__contacts-write-us {
   position: relative;
   width: 100%;
-  height: 38px;
-  margin-top: 33px;
+  margin-top: 32px;
+  padding: 10px 0px;
   font-size: 14px;
   color: #ffffff;
-  line-height: 38px;
   text-align: center;
   text-transform: uppercase;
   background-color: #ee3643;
@@ -1355,7 +1313,7 @@ a {
   margin-top: 28px;
   margin-left: 5px;
   color: #ffffff;
-  line-height: 24px;
+  line-height: 1.3;
 }
 
 .footer__top-navigation {
@@ -1367,7 +1325,7 @@ a {
   width: 548px;
   margin: 0;
   padding: 0;
-  margin-top: 39px;
+  margin-top: 36px;
   margin-left: 63px;
   list-style: none;
 }
@@ -1386,7 +1344,7 @@ a {
   width: 525px;
   margin: 0;
   padding: 0;
-  margin-top: 39px;
+  margin-top: 30px;
   margin-left: 86px;
   list-style: none;
 }
@@ -1432,6 +1390,7 @@ a {
   margin: 0;
   font-size: 16px;
   color: #ffffff;
+  line-height: 1.3;
 }
 
 
@@ -1517,6 +1476,7 @@ a {
   margin: 0;
   font-size: 16px;
   color: #ffffff;
+  line-height: 1.3;
 }
 
 .footer__bottom-communication-link,
@@ -1552,35 +1512,33 @@ a {
   background-color: #ee3643;
 }
 
-.container .user {
+.user-logged {
   margin-left: 50px;
 }
 
-.user .user__navigation {
+.user__navigation-logged {
   position: relative;
+  display: flex;
   flex-wrap: wrap;
   width: 299px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.user__navigation-logged-in {
+  margin-bottom: 3px;
 }
 
 .user__navigation-logged-in-link {
   position: relative;
   display: block;
   width: 299px;
-  height: 45px;
-  padding-left: 46px;
-  text-align: left;
-  background-color: #ffffff;
-  outline: none;
-}
-
-.user__navigation-logged-in {
-  margin-bottom: 7px;
-}
-
-.user__navigation-logged-in-link {
+  padding: 6px 0px 6px 47px;
   font-size: 21px;
   color: rgba(0, 0, 0, 1);
-  line-height: 45px;
+  background-color: #ffffff;
+  outline: none;
 }
 
 .user__navigation-logged-in-link::before {
@@ -1600,7 +1558,7 @@ a {
 
 .user__navigation-out-link::before {
   position: absolute;
-  top: 15px;
+  top: 13px;
   right: 11px;
   width: 20px;
   height: 18px;
