--- a/css/style.css
+++ b/css/style.css
@@ -1271,11 +1271,145 @@ a {
 }
 
 .popup-map {
+  position: fixed;
   display: none;
+  top: 10%;
+  left: 50%;
+  width: 940px;
+  height: 446px;
+  display: none;
+  overflow: hidden;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
+}
+
+.popup-map__img {
+  position: relative;
+  left: -250px;
+  top: -300px;
+}
+
+.popup-map__close {
+  position: absolute;
+  top: 10px;
+  right: 9px;
+  width: 21px;
+  height: 21px;
+  background-image: url("../img/icons/close-form.svg");
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.popup-map_display {
+  display: block;
 }
 
 .write-us {
+  position: fixed;
   display: none;
+  top: 10%;
+  left: 50%;
+  z-index: 1000;
+  width: 620px;
+  height: 430px;
+  background-color: #fff;
+  border-top: 7px solid #ff5358;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);.
+}
+
+.write-us_display {
+  display: block;
+}
+
+.wrapper-answer {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 55px 80px 37px 80px;
+}
+
+.wrapper-name,
+.wrapper-email {
+  margin: 0;
+  width: 220px;
+}
+
+.wrapper-text {
+  margin: 0;
+  margin-top: 21px;
+}
+
+.wrapper-name {
+  margin-right: 20px;
+}
+
+.write-us__input {
+  width: 100%;
+  height: 38px;
+  padding-left: 15px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  border: 2px solid #dee3e4;
+  border-radius: 3px;
+  outline: none;
+}
+
+.write-us__textarea {
+  padding-top: 12px;
+  padding-left: 15px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  border: 2px solid #dee3e4;
+  border-radius: 3px;
+  outline: none;
+  resize: none;
+}
+
+.wrapper-answer-btn {
+  padding: 37px 80px;
+  background-color: #f4f4f4;
+}
+
+.write-us__submit {
+  width: 460px;
+  padding: 9px 0px;
+  font-size: 14px;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #ee3643;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  outline: none;
+}
+
+.write-us__submit:hover,
+.write-us__submit:focus {
+  background-color: #ca2c37;
+}
+
+.write-us__submit:active {
+  background-color: #ba2732;
+}
+
+.write-us__close {
+  position: absolute;
+  top: 16px;
+  right: 9px;
+  width: 21px;
+  height: 21px;
+  background-image: url("../img/icons/close-form.svg");
+  background-repeat: no-repeat;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .footer-wrapper-top {
@@ -1519,6 +1653,10 @@ a {
 .user__navigation-logged {
   position: relative;
   display: flex;
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   flex-wrap: wrap;
   width: 299px;
   margin: 0;
