stylized popup write-us and popup map

--- a/css/style.css
+++ b/css/style.css
@@ -1322,7 +1322,7 @@ a {
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
-  box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);.
+  box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
 }
 
 .write-us_display {
