--- a/css/style.css
+++ b/css/style.css
@@ -1278,23 +1278,25 @@ a {
   width: 940px;
   height: 446px;
   display: none;
-  overflow: hidden;
+  background-image: url("../img/map-big.jpg");
+  background-repeat: no-repeat;
+  background-position: -250px -300px;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
 }
 
-.popup-map__img {
+/* .popup-map__img {
   position: relative;
   left: -250px;
   top: -300px;
-}
+} */
 
 .popup-map__close {
   position: absolute;
-  top: 10px;
-  right: 9px;
+  top: 13px;
+  right: -35px;
   width: 21px;
   height: 21px;
   background-image: url("../img/icons/close-form.svg");
